tests/lean/wf2.lean.expected.out
wf2.lean:3:8-3:17: error: failed to show that recursive application is decreasing, possible solutions:
  - Use `have`-expressions to prove the missing goals
  - Use `termination_by` to specify a different well-founded relation
  - Use `decreasing_by` to specity your own tactic for discharging this kind of goal
x y : Nat
⊢ x - 1 < x
